# SSD-in-Neurons

./: .gitignore  CMakeLists.txt  C_module_interface.py  C_scan_analysis.ipynb  Markov_chain_1D.ipynb  Markov_chain_2D.ipynb  ODEs.nb  Orn_Uhl_approximation.ipynb  README.md  Two_compartment_models.ipynb  Untitled.ipynb  analyse_simulation.py  approximation.ipynb  axon_graph_generate.ipynb  biological_parameters.md  cb_scan.py  delta_estimation.ipynb  directed_diffusion_test.ipynb  exhaustion_theory.ipynb  gill_ring.c  gill_ring_make.sh  graph_flow_solve.py  graph_from_swc.py  graph_transform.ipynb  hpc.py  hpc_sim.sh  hpctest.py  ladder_replace.ipynb  model_outline.aux  model_outline.tex  model_ring.ipynb  neruon_model.ipynb  neruon_model_2c.ipynb  neruon_model_ring.ipynb  network_generate.py  network_topologies.ipynb  networkx_from_swc.ipynb  networkx_from_swm.ipynb  neuron_gill.c  neuron_gill_2c.c  (+26 more)
.ipynb_checkpoints/: neuron_gill_c_interface-checkpoint.py
hpc/: hpc_sim.sh  hpc_sim_m0_d25.sh  hpc_sim_m0_d40.sh  hpc_sim_m0_d50.sh  hpc_sim_m0_d68.sh  hpc_sim_m0_d75.sh  hpc_sim_m1_d25.sh  hpc_sim_m1_d40.sh  hpc_sim_m1_d50.sh  hpc_sim_m1_d68.sh  hpc_sim_m1_d75.sh  results_0_gillespie.csv  results_0_tauleap.csv  results_1_gillespie.csv  ssd_sim_test.e7940747  ssd_sim_test.e7940819  ssd_sim_test.o7940747  ssd_sim_test.o7940819  submit.sh
mathematica/: ODEs_nonreduced.nb  population_size.nb
neuron_graphs/: model_0.pkl  model_1.pkl  model_1node.pkl
neuron_shape_data/: Evans_Twedell_Khaliq_pdyn40x_091818_1.CNG.pkl  Yin20161231s3_AR.CNG.pkl  m_hippocampus_NMO_97827.pkl  (+5 more)
(+119 files in other folders)
